--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "electron-prebuilt": "^1.1.2",
     "jquery": "^2.2.4",
+    "lodash.assign": "^4.0.9",
+    "lodash.clone": "^4.3.2",
     "lodash.template": "^4.2.5",
     "tail": "^1.1.0"
   }
